[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modmex-ai"
version = "0.2.0"
description = "Lightweight AI flows, agents, tools, and model adapters for event-driven Python systems."
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = { text = "MIT" }
authors = [{ name = "Modmex" }]
dependencies = [
    "modmex (>=1.2.0,<2.0.0)"
]

[project.optional-dependencies]
aws = ["boto3>=1.24.66,<2.0.0"]
lambda = ["modmex-lambda>=0.5.10,<1.0.0"]
realtime = ["websockets>=15.0,<16.0"]
async = ["httpx>=0.27,<1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
omit = [

]

[tool.hatch.build.targets.wheel]
packages = ["modmex_ai"]

[tool.poetry.group.dev.dependencies]
expects = ">=0.9.0,<1.0.0"
pytest = ">=8.0"
pytest-cov = "^7.1.0"
